test_suite/tests/ui/rename/non_string_on_untagged_enum.stderr
error: #[serde(rename)] must use a string name in untagged enums
 --> $DIR/non_string_on_untagged_enum.rs:6:13
  |
6 |     #[serde(rename = 1)]
  |             ^^^^^^^^^^
