test_suite/tests/ui/rename/non_string_on_untagged_enum.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(untagged)]
enum S {
    #[serde(rename = 1)]
    A,
}

fn main() {}
